2007-03-17  Simon Goodall  <libwfut@simongoodall.co.uk>

	* configure.ac: Bump version numbers.

	* Release version 0.1.0

2007-03-04  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/IO.cpp, libwfut/IO.h: Fix compiler warning. Added an
	  executable flag to DataStruct and to the queueFile function to set the
	  executable permissions of a file on sucessful download.

	* libwfut/platform.cpp: Fix error in os_set_executable.

	* libwftut/WFUT.cpp: Update to new queueFile signature.

2007-03-04  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/IO.cpp: Bug fix from Erik where where paths such as /home
	  would fail in the createParentDirs function.

	* libwfut/platform.cpp, libwfut/platform.h: Added functions to check for
	  file existance and setting world executable permissions.

	* tools/wfut.cpp: Display usage when no arguments are specified. Delete
	  the tempwfut.xml after the real wfut.xml file has been saved. Use
	  os_exists instead of the local file_exists function.

2007-02-20  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/IO.cpp: Added some more error checks.

	* tools/wfut.cpp: Updated some formatting and comments.

2007-02-20  Simon Goodall  <libwfut@simongoodall.co.uk>

	* tools/wfut.cpp: Added simple usage information.

2007-02-19  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/platform.cpp: Check %TMP%, %TEMP% then "." as possible tmp
	  file locations. Delete Win32 temp files on close.

2007-02-16  Simon Goodall  <libwfut@simongoodall.co.uk>

	* tools/wfut.cpp: Fix compiler warning.

2007-02-16  Simon Goodall  <libwfut@simongoodall.co.uk>

	* man/man1/wfut.1, configure.ac, Makefile.am, man/Makefile.am,
	  man/man1/Makefile.am: Added initial man page for wfut.

2007-02-16  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/Encoder.cpp, libwfut/Encoder.h: Renamed encode/decode to
	  encodeString and decodeString. Added an encodeURL method to encode
	  strings for suitable use as a URL.
